[gd_scene load_steps=2 format=2]

[ext_resource path="res://Store/Store_interface.gd" type="Script" id=1]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer2" type="VBoxContainer" parent="Panel"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer2"]
margin_right = 309.0
margin_bottom = 20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="Label" parent="Panel/VBoxContainer2/HBoxContainer"]
margin_top = 3.0
margin_right = 69.0
margin_bottom = 17.0
text = "Buy potion"

[node name="Button" type="Button" parent="Panel/VBoxContainer2/HBoxContainer"]
margin_left = 73.0
margin_right = 109.0
margin_bottom = 20.0
text = "Buy"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HowMuchMoney" type="Label" parent="Panel/VBoxContainer2/HBoxContainer"]
margin_left = 113.0
margin_top = 3.0
margin_right = 113.0
margin_bottom = 17.0

[node name="HBoxContainer2" type="HBoxContainer" parent="Panel/VBoxContainer2"]
margin_top = 24.0
margin_right = 309.0
margin_bottom = 44.0

[node name="Label" type="Label" parent="Panel/VBoxContainer2/HBoxContainer2"]
margin_top = 3.0
margin_right = 57.0
margin_bottom = 17.0
text = "Teleport:"

[node name="Teleporter1" type="Button" parent="Panel/VBoxContainer2/HBoxContainer2"]
margin_left = 61.0
margin_right = 123.0
margin_bottom = 20.0
text = "World1 "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Teleporter2" type="Button" parent="Panel/VBoxContainer2/HBoxContainer2"]
margin_left = 127.0
margin_right = 185.0
margin_bottom = 20.0
text = "World2"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Teleporter3" type="Button" parent="Panel/VBoxContainer2/HBoxContainer2"]
margin_left = 189.0
margin_right = 247.0
margin_bottom = 20.0
text = "World3"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Teleporter4" type="Button" parent="Panel/VBoxContainer2/HBoxContainer2"]
margin_left = 251.0
margin_right = 309.0
margin_bottom = 20.0
rect_pivot_offset = Vector2( -139, 156 )
text = "World4"

[node name="Exit" type="Button" parent="."]
margin_left = 259.152
margin_top = 158.484
margin_right = 322.152
margin_bottom = 178.484
rect_min_size = Vector2( 47.185, 0 )
text = "Go back"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Panel/VBoxContainer2/HBoxContainer/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer2/HBoxContainer2/Teleporter1" to="." method="_on_Teleporter1_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer2/HBoxContainer2/Teleporter2" to="." method="_on_Teleporter2_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer2/HBoxContainer2/Teleporter3" to="." method="_on_Teleporter3_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer2/HBoxContainer2/Teleporter4" to="." method="_on_Teleporter4_pressed"]
[connection signal="pressed" from="Exit" to="." method="_on_Exit_pressed"]
